--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,19 +48,25 @@
             ><img src="images/intro_pic.jpg" alt=""
           /></span>
           <p>
-            I have more than 3 years of experience as a software engineer and
-            have worked at both small and large organizations. While I’m a
-            proficient android java developer, I involved in web development and
-            also script automation. I also involved in desktop development using
-            C# as a freelancer job. By the way, all my projects are listed
-            <a href="#project">here</a>.
+            I'm a Solution Engineer with over 5 years of experience across both
+            frontend and backend development, specializing in scalable
+            architectures, automation scripting, and cross-functional
+            collaboration.
           </p>
           <p>
-            I love to explore new things such as new technology and coding
-            languages. While exploring, I’m attracted to solving the difficulty
-            or problems that have been faced in the exploring process. I’m
-            looking for an individual software developer role where I can gain
-            experience in different projects.
+            I have hands-on experience building robust, API-centric platforms
+            and dynamic user interfaces, using technologies like Go, .NET,
+            Python, Java, as well as React. My work spans mobile applications,
+            web platforms, DevOps practices, and system integrations, making me
+            proficient in delivering end-to-end software solutions.
+          </p>
+          <p>
+            My focus is on building resilient systems, whether on the frontend
+            or backend, that address complex technical challenges and meet
+            business requirements. I am passionate about learning new tools and
+            frameworks, and enjoy collaborating across teams to ensure scalable,
+            user-centered solutions. By the way, all my projects are listed
+            <a href="#project">here</a>.
           </p>
         </article>
 
@@ -325,12 +331,14 @@
               <li>
                 <h3>Zerotouch</h3>
                 <ul class="skills">
-                  <li>Laravel</li>
-                  <li>PHP</li>
-                  <li>Nginx</li>
+                  <li>Go</li>
+                  <li>Gin</li>
+                  <li>Typescript</li>
+                  <li>Javascript</li>
+                  <li>SOAP XML</li>
+                  <li>REST</li>
                   <li>Postgres</li>
                   <li>Git</li>
-                  <li>Docker</li>
                 </ul>
                 <h4 class="desc">Description</h4>
                 <p>
