--- a/resume/index.html
+++ b/resume/index.html
@@ -24,7 +24,7 @@
               <div class="profile-info">
                 <img src="assets/images/profile.png" alt="" />
                 <h3>Terrence Siow</h3>
-                <span>OSS Engineer</span>
+                <span>Solution Engineer</span>
               </div>
               <h4 class="ltitle">Contact</h4>
               <div class="contact-box pb0">
@@ -170,16 +170,19 @@
             <div class="rit-cover">
               <div class="hotkey">
                 <h1 class="">Terrence Siow</h1>
-                <small>OSS Engineer</small>
+                <small>Solution Engineer</small>
               </div>
               <h2 class="rit-titl"><i class="far fa-user"></i> Profile</h2>
               <div class="about">
                 <p>
-                  Agile Software Engineer talented at contributing to multi-team
-                  development projects. Collaborative designer of exceptionally
-                  useful solutions and perfectly customized products.
-                  Knowledgeable in programming environments ranging from .NET to
-                  JAVA.
+                  Results-driven Solution Engineer with a strong focus on
+                  automation, scalable architecture, and cross-functional
+                  collaboration. Demonstrated success in reducing operational
+                  overhead through the implementation of modern DevOps practices
+                  and the development of efficient frontend and backend systems.
+                  Proficient in Go, .NET, Python, and Java, with hands-on
+                  experience building robust, API-centric platforms that address
+                  complex business and technical challenges.
                 </p>
                 <div class="btn-ro row no-margin">
                   <ul class="btn-link">
@@ -197,7 +200,7 @@
                 <i class="fas fa-briefcase"></i> Work Experiance
               </h2>
               <div class="work-exp">
-                <h6>OSS Engineer <span>JUN 2021 - Current</span></h6>
+                <h6>Solution Engineer <span>JUN 2021 - Current</span></h6>
                 <i>TIME dotCom Berhad / Malaysia</i>
                 <ul>
                   <li>
@@ -547,7 +550,7 @@
               <div class="profess-cover row no-margin">
                 <div class="col-md-6">
                   <div class="prog-row row">
-                    <div class="col-sm-6">Android</div>
+                    <div class="col-sm-6">Go</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
