disable some text temp

--- a/resume/index.html
+++ b/resume/index.html
@@ -49,7 +49,7 @@
                 </div>
               </div>
 
-              <h4 class="ltitle">Portfolio</h4>
+              <!-- <h4 class="ltitle">Portfolio</h4> -->
               <!-- For pdf -->
               <!-- <div class="contact-box">
                             <div class="icon">
@@ -68,7 +68,7 @@
                             </div>
                         </div> -->
               <!-- For web -->
-              <ul class="row social-link no-margin">
+              <!-- <ul class="row social-link no-margin">
                 <li>
                   <a
                     href="https://www.linkedin.com/in/terrence-siow/"
@@ -83,7 +83,7 @@
                     ><i class="fas fa-folder-open"></i
                   ></a>
                 </li>
-              </ul>
+              </ul> -->
 
               <!-- <h4 class="ltitle">References</h4>
                         <div class="refer-cov">
@@ -184,7 +184,7 @@
                   experience building robust, API-centric platforms that address
                   complex business and technical challenges.
                 </p>
-                <div class="btn-ro row no-margin">
+                <!-- <div class="btn-ro row no-margin">
                   <ul class="btn-link">
                     <li>
                       <a href="./Terrence_Siow_resume.pdf"
@@ -193,7 +193,7 @@
                       >
                     </li>
                   </ul>
-                </div>
+                </div> -->
               </div>
 
               <h2 class="rit-titl">
