--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -337,6 +337,7 @@
                   <li>Javascript</li>
                   <li>SOAP XML</li>
                   <li>REST</li>
+                  <li>JSON</li>
                   <li>Postgres</li>
                   <li>Git</li>
                 </ul>
