--- a/resume/index.html
+++ b/resume/index.html
@@ -170,7 +170,7 @@
             <div class="rit-cover">
               <div class="hotkey">
                 <h1 class="">Terrence Siow</h1>
-                <small>Solution Engineer</small>
+                <small>OSS Engineer</small>
               </div>
               <h2 class="rit-titl"><i class="far fa-user"></i> Profile</h2>
               <div class="about">
@@ -184,7 +184,7 @@
                   experience building robust, API-centric platforms that address
                   complex business and technical challenges.
                 </p>
-                <!-- <div class="btn-ro row no-margin">
+                <div class="btn-ro row no-margin">
                   <ul class="btn-link">
                     <li>
                       <a href="./Terrence_Siow_resume.pdf"
@@ -193,7 +193,7 @@
                       >
                     </li>
                   </ul>
-                </div> -->
+                </div>
               </div>
 
               <h2 class="rit-titl">
@@ -573,7 +573,7 @@
                         <div
                           class="progress-bar"
                           role="progressbar"
-                          style="width: 50%"
+                          style="width: 70%"
                           aria-valuenow="25"
                           aria-valuemin="0"
                           aria-valuemax="100"
@@ -584,7 +584,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="row prog-row">
-                    <div class="col-sm-6">JAVA</div>
+                    <div class="col-sm-6">Javascript</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
@@ -618,7 +618,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="row prog-row">
-                    <div class="col-sm-6">Web Development</div>
+                    <div class="col-sm-6">Typecript</div>
                     <div class="col-sm-6">
                       <div class="progress">
                         <div
@@ -641,7 +641,7 @@
                         <div
                           class="progress-bar"
                           role="progressbar"
-                          style="width: 30%"
+                          style="width: 50%"
                           aria-valuenow="25"
                           aria-valuemin="0"
                           aria-valuemax="100"
@@ -726,7 +726,7 @@
                         <div
                           class="progress-bar"
                           role="progressbar"
-                          style="width: 40%"
+                          style="width: 50%"
                           aria-valuenow="25"
                           aria-valuemin="0"
                           aria-valuemax="100"
