--- a/resume/index.html
+++ b/resume/index.html
@@ -184,7 +184,7 @@
                   experience building robust, API-centric platforms that address
                   complex business and technical challenges.
                 </p>
-                <div class="btn-ro row no-margin">
+                <!-- <div class="btn-ro row no-margin">
                   <ul class="btn-link">
                     <li>
                       <a href="./Terrence_Siow_resume.pdf"
@@ -193,7 +193,7 @@
                       >
                     </li>
                   </ul>
-                </div>
+                </div> -->
               </div>
 
               <h2 class="rit-titl">
